--- a/ROLL-THE-DICE/index.html
+++ b/ROLL-THE-DICE/index.html
@@ -25,7 +25,16 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+ <h1> Roll Dice Game </h1>
+
+  <p>Let The Game Begin</p>
+
+  <button id = "ButtonOn"> Roll The Dice </button>
+  <p id = playerRollText> Player Result </p>
+  <p id="aiRollText"> Ai Result </p>
+  <p id ="result"> </p>
+  <p id = "playerScoreText"> </p>
+<p id = "aiScoreText"> </p>
   <script src="js/app.js"></script>
 
 </body>
