--- a/ROLL-THE-DICE/index.html
+++ b/ROLL-THE-DICE/index.html
@@ -32,7 +32,7 @@
   <button id = "ButtonOn"> Roll The Dice </button>
   <p id = playerRollText> Player Result </p>
   <p id="aiRollText"> Ai Result </p>
-  <p id ="result">  </p>
+  <p id ="result"> Evolution Result:  </p>
   <p id = "playerScoreText"> Player Score  </p>
 <p id = "aiScoreText"> Ai Score </p>
   <script src="js/app.js"></script>
