--- a/ROLL-THE-DICE/index.html
+++ b/ROLL-THE-DICE/index.html
@@ -30,8 +30,8 @@
   <p>Let The Game Begin</p>
 
   <button id = "ButtonOn"> Roll The Dice </button>
-  <p id = playerRollText> Player Result </p>
-  <p id="aiRollText"> Ai Result </p>
+  <p id = playerRollText> Player Roll </p> 
+  <p id="aiRollText"> Ai Roll </p>
   <p id ="result"> Evolution Result:  </p>
   <p id = "playerScoreText"> Player Score  </p>
 <p id = "aiScoreText"> Ai Score </p>
