--- a/ROCK-PAPER-SCISSORS/index.html
+++ b/ROCK-PAPER-SCISSORS/index.html
@@ -25,16 +25,7 @@
 <body>
 
   <!-- Add your site or application content here -->
- <h1> Roll Dice Game </h1>
-
-  <p>Let The Game Begin</p>
-
-  <button id = "ButtonOn"> Roll The Dice </button>
-  <p id = playerRollText> Player Roll </p>
-  <p id="aiRollText"> Ai Roll </p>
-  <p id ="result"> Evolution Result:  </p>
-  <p id = "playerScoreText"> Player Score  </p>
-<p id = "aiScoreText"> Ai Score </p>
+  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/app.js"></script>
 
 </body>
