--- a/ROCK-PAPER-SCISSORS/index.html
+++ b/ROCK-PAPER-SCISSORS/index.html
@@ -25,7 +25,12 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <h1> Rock Paper Scissors</h1>
+  <p> LET THE FUN START</p>
+  <button id = "button0"> Rock </button>
+  <button id = " button1"> Paper </button>
+  <button id = "button2"> Scissors </button>
+
   <script src="js/app.js"></script>
 
 </body>
