--- a/ROCK-PAPER-SCISSORS/index.html
+++ b/ROCK-PAPER-SCISSORS/index.html
@@ -27,14 +27,12 @@
   <!-- Add your site or application content here -->
   <h1> Rock Paper Scissors</h1>
   <p> LET THE FUN START</p>
-  <button id = "button0" onclick ="playerChoice('rock')" > Rock</button>
-  <button id ="button1" onclick="playerChoice('paper')" > Paper </button>
-  <button id = "button2" onclick="playerChoice('scissors')"> Scissors</button>
-  <button onclick="randomSelect ()"> Randomly Select </button>
-  <button id = "randomButton"></button>
-
+  <button id = "button0"  > Rock</button>
+  <button id ="button1"  > Paper </button>
+  <button id = "button2"> Scissors</button>
   <p id = "playerChoice"> Player: </p>
   <p id = "aiChoice"> AI: </p>
+
   <script src="js/app.js"></script>
 
 </body>
