--- a/ROLL-THE-DICE/index.html
+++ b/ROLL-THE-DICE/index.html
@@ -35,6 +35,8 @@
   <p id ="result"> Evolution Result:  </p>
   <p id = "playerScoreText"> Player Score  </p>
 <p id = "aiScoreText"> Ai Score </p>
+  <p id="playerHistory"></p>
+  <p id = "computerHistory"></p>
   <script src="js/app.js"></script>
 
 </body>
